Changed h1 to a button and gave it some styling

--- a/styling.css
+++ b/styling.css
@@ -11,10 +11,14 @@ html {
 	 color: #b09e99;
 }
 
-h1 {
+#ip-button {
+  color: #b09e99;
+  border: 2.5px solid #b09e99;
+  border-radius: 15px;
+  background-color: transparent;
   font-size: 200px;
 }
 
-h1:hover {
+#ip-button:hover {
   cursor: pointer;
 }
